src/test/contracts/negative/wrong_return1.ligo
type return is list (operation) * int;

function updateAdmin(const _new_admin: address; var s: int): return is {
    const _ = 1;
} with s
